src/test/deca/context/invalid/provided/this_in_main.deca
{
int x;
this.x = 0;
}
